--- a/src/includes/supveto/_formations.pug
+++ b/src/includes/supveto/_formations.pug
@@ -2,11 +2,11 @@
 //-formation Auxiliaire spécialisé vétérinaire
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/nqX406rf/icon-Sup062025.png" alt="icon Santé animale")/
     mj-column(width="80%")    
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en initial
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") ASV] Auxiliaire spécialisé(e) vétérinaire
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#008853;") ASV] Auxiliaire spécialisé(e) vétérinaire
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0")
@@ -19,11 +19,11 @@ mj-section(padding="0")
 //-formation Bachelor Chargé de management et gestion en structure animalière
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/nqX406rf/icon-Sup062025.png" alt="icon Santé animale")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#c21718;") Bachelor] Chargé(e) de gestion et de management en structure animalière
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#008853;") Bachelor] Chargé(e) de gestion et de management en structure animalière
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+2,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
