--- a/src/includes/sm/_formations.pug
+++ b/src/includes/sm/_formations.pug
@@ -2,11 +2,11 @@
 //-formation secrétaire médicale en initial
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/yFgqHh8x/icon-SM062025.png" alt="icon secrétariat médical")/
     mj-column(width="80%")    
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en initial
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") SM] Secrétaire médical(e)
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#2386c8;") SM] Secrétaire médical(e)
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0")
@@ -19,11 +19,11 @@ mj-section(padding="0")
 //-formation secrétaire médical(e) en apprentissage       
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/yFgqHh8x/icon-SM062025.png" alt="icon secrétariat médical")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation en apprentissage
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") SM] Secrétaire médical(e)
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#2386c8;") SM] Secrétaire médical(e)
         mj-text(align="left" padding="0px 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
