--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -1,7 +1,7 @@
 
 <mjml>
   <mj-head>
-    <mj-title>JPO du 21 juin 2025 Supveto Lille</mj-title>
+    <mj-title>JPO du 21 juin 2025 Ecosup Santé</mj-title>
     <mj-font name="Roboto" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&amp;display=swap"></mj-font>
     <mj-font name="fontAwesome" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
     <mj-raw>
@@ -24,15 +24,15 @@
       <mj-class name="T13-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="700"/>
       <mj-class name="T13-400" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="400"/>
       <mj-class name="T10-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="10px" line-height="12px" font-weight="300"/>
-      <mj-button border="2px solid #008853" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#008853"></mj-button>
+      <mj-button border="2px solid #2386C8" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#2386c8"></mj-button>
       <mj-class name="cT1" color="#1a1a1a"/>
       <mj-class name="cT0" color="#4d4d4d"/>
-      <mj-class name="cT2" color="#999999"></mj-class>
+      <mj-class name="cT2" color="#999999"/>
       <mj-class name="cTW" color="#ffffff"/>
-      <mj-class name="c0" color="#008853"/>
-      <mj-class name="bg0" background-color="#008853"/>
-      <mj-class name="c1" color="#00390D"/>
-      <mj-class name="bg1" background-color="#00390D"/>
+      <mj-class name="c0" color="#2386c8"/>
+      <mj-class name="bg0" background-color="#2386c8"/>
+      <mj-class name="c1" color="#114364"/>
+      <mj-class name="bg1" background-color="#114364"/>
     </mj-attributes>
     <mj-breakpoint width="420px"></mj-breakpoint>
   </mj-head>
@@ -65,20 +65,20 @@
     </mj-wrapper>
     <mj-section mj-class="bg1" padding="0 20px">
       <mj-column>
-        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="http://supveto-lille.fr" target="_blank">www.supveto-lille.fr</a></mj-text>
+        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-sante.fr/secretaire-medicale-2" target="_blank">www.ecosup-sante.fr</a></mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/nqX406rf/icon-Sup062025.png" alt="icon Santé animale"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/yFgqHh8x/icon-SM062025.png" alt="icon secrétariat médical"/>
       </mj-column>
       <mj-column width="80%">   
         <mj-spacer height="20px"></mj-spacer>
         <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en initial</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="font-weight:700;color:#008853;">ASV</span> Auxiliaire spécialisé(e) vétérinaire</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="font-weight:700;color:#2386c8;">SM</span> Secrétaire médical(e)</mj-text>
         <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">24 mois</span>,</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">8 mois</span>,</mj-text>
         <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Formation initiale ou continue. Financement possible grâce à la mobilisation du CPF ou autres organismes extérieurs.</mj-text>
       </mj-column>
@@ -90,17 +90,18 @@
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/nqX406rf/icon-Sup062025.png" alt="icon Santé animale"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/yFgqHh8x/icon-SM062025.png" alt="icon secrétariat médical"/>
       </mj-column>
       <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="font-weight:700;color:#008853;">Bachelor</span> Chargé(e) de gestion et de management en structure animalière</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Post-Bac+2,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
+        <mj-text align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="font-weight:700;color:#2386c8;">SM</span> Secrétaire médical(e)</mj-text>
+        <mj-text align="left" padding="0px 15px" mj-class="T16-400 cT0">
+           <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
+        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">18 mois</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
+        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
+           <span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
       </mj-column>
     </mj-section>
     <mj-wrapper background-color="#1a1a1a" padding="32px" padding-bottom="0">
