--- a/src/includes/dietetique/_formations.pug
+++ b/src/includes/dietetique/_formations.pug
@@ -2,11 +2,11 @@
 //-formation BTS Diététique et nutrition        
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/x868xWbB/icon-Diet062025.png" alt="icon bol composé de légumes et de fruits")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation initiale
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#C21718;") BTS] Diététique et nutrition.
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#EC619F;") BTS] Diététique et nutrition.
         mj-text(align="left" padding="0px 15px" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac,
         mj-text(align="left" padding="0 15px" mj-class="T16-400 cT0") 
@@ -19,11 +19,11 @@ mj-section(padding="0")
 //-Formation Bachelor Chargé(e) de projet en nutrition et de la prise en charge des troubles du comportement alimentaire
 mj-section(padding="20px" background-color="#e6e6e6")
     mj-column(width="20%")
-        mj-image(padding="0" width="224px" src="" alt="")/
+        mj-image(padding="0" width="224px" src="https://i.ibb.co/x868xWbB/icon-Diet062025.png" alt="icon bol composé de légumes et de fruits")/
     mj-column(width="80%")
         mj-spacer(height="20px")
         mj-text(align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px") Formation initiale
-        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#c21718;") Bachelor] Chargé(e) de projet en nutrition et de la prise en charge des troubles du comportement alimentaire.
+        mj-text(align="left" padding="2px 15px" mj-class="T24-300 cT1") #[span(style="font-weight:700;color:#EC619F;") Bachelor] Chargé(e) de projet en nutrition et de la prise en charge des troubles du comportement alimentaire.
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
             | #[span(style="color:#999999;") &#x25CF;] Post-Bac+2,
         mj-text(padding="0 15px" align="left" mj-class="T16-400 cT0") 
