--- a/src/includes/dietetique/_itineraire.pug
+++ b/src/includes/dietetique/_itineraire.pug
@@ -14,4 +14,4 @@ mj-wrapper(background-color="#ffffff" padding="20px")
             mj-text(align="center" padding="0" padding-bottom="10px" mj-class="T13-400 cT0") cliquez sur l'icon de votre choix pour organiser votre itinéraire
 mj-section(mj-class="bg1" padding="0 20px")
     mj-column
-        mj-text(align="center" padding="14px 0" mj-class="T24-700" color="#ffffff"  letter-spacing="2px") #[a(style="text-decoration:none;color:#ffffff;" href="https://ecosup-hotellerie.fr" target="_blank") www.ecosup-hotellerie.fr]
+        mj-text(align="center" padding="14px 0" mj-class="T24-700" color="#ffffff"  letter-spacing="2px") #[a(style="text-decoration:none;color:#ffffff;" href="https://ecosup-dietetique.fr" target="_blank") www.ecosup-dietetique.fr]
