--- a/src/includes/hotellerie/_header.pug
+++ b/src/includes/hotellerie/_header.pug
@@ -1,22 +1,43 @@
 //-Header Hôtellerie
-mj-section(mj-class="bg0" padding="10px 20px")
+mj-section(padding="20px")
     mj-column
-        mj-image(padding="0" align="left" width="153px" src="https://i.ibb.co/CvXDTv5/logo-Hotellerie-Blanc.png" alt="logo Ecosup Hôtellerie")/
-mj-section(background-color="#ecebf3" padding="0")
-    mj-column
+        mj-image(padding="0" width="153px" src="https://i.ibb.co/ZGht1kv/logo-EHotellerie.png" alt="logo Ecosup Hôtellerie")/
+mj-section(padding="0" mj-class="bg0")
+    mj-column(width="100%")
+        mj-text(align="center" padding="2px 20px" mj-class="T16-700 cTW") Journée Portes Ouvertes samedi 21 juin de 9h30 à 13h
         mj-image(padding="0" width="600px" src="https://i.ibb.co/cXtXJk4S/jpo24052025-01.png" alt="affiche de la jpo du samedi 24 mai 2025")/
+    mj-column(width="100%" mj-class="bg0")
+        mj-spacer(height="5px")
+mj-section(padding="0" mj-class="bg0")
+    mj-group(width="100%")
+        mj-column(width="50%")
+            mj-image(padding="0" width="300px" src="https://i.ibb.co/ykzKwfr/Imag-Gr-Etudiants.jpg")/
+        mj-column(width="1%")
+            mj-spacer(height="5px")
+        mj-column(width="24%")
+            mj-image(padding="0" width="150px" src="https://i.ibb.co/0s49kK1/SMapprentissage.jpg")/
+        mj-column(width="1%")
+            mj-spacer(height="5px")
+        mj-column(width="24%")
+            mj-image(padding="0" width="150px" src="https://i.ibb.co/0s49kK1/SMapprentissage.jpg")/
+    mj-column(mj-class="bg0" width="100%")
+        mj-spacer(height="5px")  
 mj-section(background-color="#ffffff" padding="20px")  
     mj-column(width="88%")
         mj-text(padding="5px 10px" mj-class="T36-900 c0") Votre carrière dans l'Hôtellerie Restauration commence ici, à nos côtés&nbsp;! 
         mj-text(padding="5px 10px" mj-class="T16-400 cT0") #[span(style="font-weight:700;color:#1a1a1a;") {{ contact.PRENOM }}], les métiers de l'Hôtellerie Restauration vous passionnent&nbsp;? Faites de votre ambition une réalité avec une formation diplômante qui propulse votre avenir&nbsp;! 
         mj-text(padding="5px 10px" mj-class="T16-400 cT0") Rejoignez-nous ce #[span(style="font-weight:700;color:#1a1a1a;") samedi 21 juin de 9h30 à 13h] pour une immersion unique&nbsp;:
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0") #[span(style="font-size:20px;line-height:20px;") &#x1F680;] 
-            | #[span(style="font-weight:700;color:#1a1a1a;") Découvrez] un campus moderne, #[span(style="font-size:20px;line-height:20px;") &#x1F4AC;] #[span(style="font-weight:700;color:#1a1a1a;") Échangez] avec des experts et des étudiants inspirants,
-            | #[span(style="font-size:20px;line-height:20px;") &#x1F4E2;] #[span(style="font-weight:700;color:#1a1a1a;") Assistez] à des présentations motivantes sur nos programmes,
-            | #[span(style="font-size:20px;line-height:20px;") &#x2753;] #[span(style="font-weight:700;color:#1a1a1a;") Posez] toutes vos questions sur les admissions et la vie étudiante,
-            | #[span(style="font-size:20px;line-height:20px;") &#x1F50E;] #[span(style="font-weight:700;color:#1a1a1a;") Vivez] l'expérience et donnez un vrai coup d'accélérateur à votre carrière.
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0")
+            | - #[span(style="font-weight:700;color:#1a1a1a;") Découvrez] un campus moderne, 
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0")
+            | - #[span(style="font-weight:700;color:#1a1a1a;") Échangez] avec des experts et des étudiants inspirants,
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0")
+            | - #[span(style="font-weight:700;color:#1a1a1a;") Assistez] à des présentations motivantes sur nos programmes,
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0")
+            | - #[span(style="font-weight:700;color:#1a1a1a;") Posez] toutes vos questions sur les admissions et la vie étudiante,
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0")
+            | - #[span(style="font-weight:700;color:#1a1a1a;") Vivez] l'expérience et donnez un vrai coup d'accélérateur à votre carrière.
         mj-text(padding="5px 10px" padding-bottom="20px" mj-class="T16-400 cT0") Ne manquez pas cette opportunité qui façonnera votre avenir&nbsp;!
         mj-text(align="right" padding="0px 30px" mj-class="T16-700 cT1") Hélène Salmon
         mj-text(align="right" padding="0px 30px" mj-class="T16-400 cT0") Responsable des études
         mj-text(align="right" padding="0px 30px" mj-class="T16-400 cT0") Ecosup Hôtellerie
-        //-mj-button(padding="0" padding-top="20px" width="280px" mj-class="T16-700 bg0 cTW") #[span(style="text-transform:uppercase;") Journée Portes Ouvertes] samedi 21 juin de 9h30 à 13h
