--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -50,33 +50,29 @@
     </mj-section>
     <mj-section padding="0" mj-class="bg0">
       <mj-column width="100%">
-        <mj-text align="center" padding="2px 20px" mj-class="T16-700 cTW">Journée Portes Ouvertes samedi 21 juin de 9h30 à 13h</mj-text>
+        <mj-spacer height="2px"> </mj-spacer>
         <mj-image padding="0" width="600px" src="https://i.ibb.co/cXtXJk4S/jpo24052025-01.png" alt="affiche de la jpo du samedi 24 mai 2025"/>
       </mj-column>
       <mj-column width="100%" mj-class="bg0">
-        <mj-spacer height="5px"></mj-spacer>
+        <mj-spacer height="2px"></mj-spacer>
       </mj-column>
     </mj-section>
     <mj-section padding="0" mj-class="bg0">
       <mj-group width="100%">
         <mj-column width="50%">
-          <mj-image padding="0" width="300px" src="https://i.ibb.co/ykzKwfr/Imag-Gr-Etudiants.jpg"/>
+          <mj-image padding="0" width="400px" src="https://i.ibb.co/ykzKwfr/Imag-Gr-Etudiants.jpg" alt=""/>
         </mj-column>
-        <mj-column width="1%">
-          <mj-spacer height="5px"></mj-spacer>
+        <mj-column width="5px"></mj-column>
+        <mj-column width="24.1666667%">
+          <mj-image padding="0" width="200px" src="https://i.ibb.co/5vYp60x/112024-A11-Assurance.jpg" alt=""/>
         </mj-column>
-        <mj-column width="24%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/0s49kK1/SMapprentissage.jpg"/>
-        </mj-column>
-        <mj-column width="1%">
-          <mj-spacer height="5px"></mj-spacer>
-        </mj-column>
-        <mj-column width="24%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/0s49kK1/SMapprentissage.jpg"/>
+        <mj-column width="5px"></mj-column>
+        <mj-column width="24.1666667%">
+          <mj-image padding="0" width="200px" src="https://i.ibb.co/dD6kJyT/rest02-2024.jpg" alt=""/>
         </mj-column>
       </mj-group>
       <mj-column mj-class="bg0" width="100%">
-        <mj-spacer height="5px"> </mj-spacer>
+        <mj-text align="center" padding="2px 20px" mj-class="T16-700 cTW">Journée Portes Ouvertes samedi 21 juin de 9h30 à 13h</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding="20px"> 
