--- a/src/includes/hotellerie/_header.pug
+++ b/src/includes/hotellerie/_header.pug
@@ -3,25 +3,18 @@ mj-section(padding="20px")
     mj-column
         mj-image(padding="0" width="153px" src="https://i.ibb.co/ZGht1kv/logo-EHotellerie.png" alt="logo Ecosup Hôtellerie")/
 mj-section(padding="0" mj-class="bg0")
-    mj-column(width="100%")
-        mj-spacer(height="2px")  
-        mj-image(padding="0" width="600px" src="https://i.ibb.co/cXtXJk4S/jpo24052025-01.png" alt="affiche de la jpo du samedi 24 mai 2025")/
-    mj-column(width="100%" mj-class="bg0")
-        mj-spacer(height="2px")
+    mj-column(width="100%" padding="3px 0")
+        mj-image(padding="0" width="600px" src="https://i.ibb.co/6RYDGsQN/jpo-Aff21062025.png" alt="affiche de la jpo du samedi 21 juin 2025")/
 mj-section(padding="0" mj-class="bg0")
     mj-group(width="100%")
         mj-column(width="50%")
-            mj-image(padding="0" width="400px" src="https://i.ibb.co/ykzKwfr/Imag-Gr-Etudiants.jpg" alt="")/
-        mj-column(width="5px")
-            //-mj-spacer(height="1px")
-        mj-column(width="24.1666667%")
-            mj-image(padding="0" width="200px" src="https://i.ibb.co/5vYp60x/112024-A11-Assurance.jpg" alt="")/
-        mj-column(width="5px")
-           //-mj-spacer(height="1px")
-        mj-column(width="24.1666667%")
-            mj-image(padding="0" width="200px" src="https://i.ibb.co/dD6kJyT/rest02-2024.jpg" alt="")/
+            mj-image(padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="")/
+        mj-column(width="25%")
+            mj-image(padding="0" width="150px" src="https://i.ibb.co/5vYp60x/112024-A11-Assurance.jpg" alt="")/
+        mj-column(width="25%")
+            mj-image(padding="0" width="150px" src="https://i.ibb.co/dD6kJyT/rest02-2024.jpg" alt="")/
     mj-column(mj-class="bg0" width="100%")
-        mj-text(align="center" padding="2px 20px" mj-class="T16-700 cTW") Journée Portes Ouvertes samedi 21 juin de 9h30 à 13h
+        mj-text(align="center" padding="3px 20px" mj-class="T16-700 cTW") Journée Portes Ouvertes samedi&nbsp;21&nbsp;juin&nbsp;de&nbsp;9h30&nbsp;à&nbsp;13h
 mj-section(background-color="#ffffff" padding="20px")  
     mj-column(width="88%")
         mj-text(padding="5px 10px" mj-class="T36-900 c0") Votre carrière dans l'Hôtellerie Restauration commence ici, à nos côtés&nbsp;! 
